[package]
name = "bencher"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Sofcore <admin@sofcore.io>"]
description = "Susy bitcoin client."

[dependencies]
storage = { path = "../storage" }
db = { path = "../db" }
verification = { path = "../verification" }
network = { path = "../network" }
chain = { path = "../chain", features = ["test-helpers"] }
primitives = { path = "../primitives" }
test-data = { path = "../test-data" }
time = "*"
byteorder = {version="1.0", registry="susytech"}

[[bin]]
path = "src/main.rs"
name = "bencher"
