[package]
name = "miner"
version = "0.1.0"
authors = ["Sofcore <admin@sofcore.io>"]

[dependencies]
byteorder = {version="1.0", registry="susytech"}
heapsize = {version="0.4",registry="susytech"}
bitcrypto = { path = "../crypto" }
chain = { path = "../chain" }
storage = { path = "../storage" }
db = { path = "../db" }
network = { path = "../network" }
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
verification = { path = "../verification" }
keys = { path = "../keys" }
script = { path = "../script" }

[dev-dependencies]
test-data = { path = "../test-data" }

[features]
test-helpers = []