[package]
name = "p2p"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]

[dependencies]
tokio-core = "0.1.6"
tokio-io = "0.1.12"
parking_lot = "0.8"
futures = {version = "0.1",registry="susytech"}
futures-cpupool = "0.1"
time = {version="0.1",registry="susytech"}
rand = {version="0.4",registry="susytech"}
log = {version="0.4",registry="susytech"}
abstract-ns = "0.3"
ns-dns-tokio = "0.3"
csv = "1"

primitives = { path = "../primitives" }
bitcrypto = { path = "../crypto" }
message = { path = "../message" }
serialization = { path = "../serialization" }
network = { path = "../network" }
