[package]
name = "script"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]

[dependencies]
bitcrypto = { path = "../crypto" }
byteorder = {version="1.0", registry="susytech"}
chain = { path = "../chain" }
keys = { path = "../keys" }
primitives = { path = "../primitives" }
serialization = { path = "../serialization" }
log = {version="0.4",registry="susytech"}

[dev-dependencies]
rustc-hex = "2"
serde_json = {version = "1.0",registry="susytech"}
chain = { path = "../chain", features = ["test-helpers"] }
