[package]
name = "verification"
version = "0.1.0"
authors = ["Nikolay Volf <nikvolf@gmail.com>"]

[dependencies]
time = {version="0.1",registry="susytech"}
log = {version="0.4",registry="susytech"}
rayon = {version="1.0",registry="susytech"}
parking_lot = "0.8"
byteorder = {version="1.2",registry="susytech"}
keys = { path = "../keys" }
primitives = { path = "../primitives" }
chain = { path = "../chain" }
serialization = { path = "../serialization" }
script = { path = "../script" }
network = { path = "../network" }
storage = { path = "../storage" }
bitcrypto = { path = "../crypto" }
rustc-hex = "2"
bitvec = "0.10"
bitflags = "1.0"

[dev-dependencies]
rand = {version="0.4",registry="susytech"}
test-data = { path = "../test-data" }
db = { path = "../db" }
assert_matches = "1.3.0"
chain = { path = "../chain", features = ["test-helpers"] }
